--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -8,6 +8,8 @@
   <title>Aparo Cecilia</title>
   <meta name="keywords" content="Portfolio">
   <meta name="description" content="Aparo Cecilia">
+  <link rel="icon" type="image/png" href="{% static 'images/fav.png' %}">
+
 
   <link rel="stylesheet" href="{% static 'fonts/flat-icon/flaticon.css' %}">
   <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
@@ -104,7 +106,7 @@
               </div>
             </div>
             <div class="col-md-8 about__content">
-              <p class="about__description">I’m a passionate software engineer and tech enthusiast, 
+              <p class="about__description">A passionate software engineer and tech enthusiast, 
                 blending creativity with cutting-edge technology to build impactful, user-focused
                  solutions. Driven by innovation, I specialize in crafting web and mobile applications, 
                  exploring AI, and shaping the future of tech. Let’s create something extraordinary 
@@ -157,7 +159,7 @@
               <img src="{% static '/images/dj.jpg' %}" alt="">
               <h4 class="skill__single-part__title">WEB DEVELOPMENT</h4>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width:80%;background-color: #7FB7FA;">
+                <div class="progress-bar" role="progressbar" style="width:80%;background-color: #C99AFF;">
                 </div>
               </div>
             </div>
@@ -167,7 +169,7 @@
               <img src="{% static '/images/BI.jpg' %}" alt="">
               <h4 class="skill__single-part__title">DATA ANALYSIS</h4>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width:80%;background-color: #FFAC1B;;">
+                <div class="progress-bar" role="progressbar" style="width:80%;background-color: #C99AFF;">
                 </div>
               </div>
             </div>
@@ -232,42 +234,42 @@
            These experiences have shaped my skills in web development, data analysis, and UI/UX design, 
            fueling my passion for continuous learning and innovation.</p>
         <div class="portfolio__button-group">
-          <a class="button button--default" data-filter="all" href="#">ALL</a>
-          <a class="button button--default" data-filter=".category-a" href="#">Languages & Frameworks</a>
+          <!-- <a class="button button--default" data-filter="all" href="#">My </a>
+          <a class="button button--default" data-filter=".category-a" href="#">Tech-Events</a>
           <a class="button button--default" data-filter=".category-b" href="#">Internship</a>
-          <a class="button button--default" data-filter=".category-c" href="#">Tech Communities</a>
+          <a class="button button--default" data-filter=".category-c" href="#">Tech Communities</a> -->
           <a class="button button--default" data-filter=".category-d" href="#">Skill Building</a>
         </div>
         <div class="row gutters-40">
           <div class="col-md-4">
-            <div class="portfolio__single-section mix category-a " data-order="1">
-              <img class="portfolio__single-section__image img-responsive" src="{% static '/images/1.jpeg' %}" alt="">
+            <div class="portfolio__single-section mix category-d " data-order="1">
+              <img class="portfolio__single-section__image img-responsive" src="{% static '/images/g.jpg' %}" alt="">
               <div class="portfolio__single-section__overlay">
                 <div class="overlay-content">
-                  <h4>LOGO DESIGN</h4>
-                  <p>Designer</p>
+                  <h4 style="color:#7b08ff">WORDPRESS</h4>
+                  <p  style="color:#7b08ff">Customizing Websites in PHP</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="portfolio__single-section mix category-b" data-order="2">
-              <img class="portfolio__single-section__image img-responsive" src="{%static '/images/2.jpeg' %}" alt="">
+            <div class="portfolio__single-section mix category-d" data-order="2">
+              <img class="portfolio__single-section__image img-responsive" src="{%static '/images/2.png' %}" alt="">
               <div class="portfolio__single-section__overlay">
                 <div class="overlay-content">
-                  <h4>WEBSITE DESIGN</h4>
-                  <p>Designer</p>
+                  <h4 style="color:#7b08ff">DJANGO</h4>
+                  <p style="color:#7b08ff">Website development in Python, JS , HTML, CSS & BOOTSTRAP </p>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="portfolio__single-section mix category-c" data-order="3">
-              <img class="portfolio__single-section__image img-responsive" src="{% static '/images/3.jpeg' %}" alt="">
+            <div class="portfolio__single-section mix category-d" data-order="3">
+              <img class="portfolio__single-section__image img-responsive" src="{% static '/images/3.jpg' %}" alt="">
               <div class="portfolio__single-section__overlay">
                 <div class="overlay-content">
-                  <h4>LOGO DESIGN</h4>
-                  <p>Designer</p>
+                  <h4 style="color:#7b08ff">AI & ML</h4>
+                  <p style="color:#7b08ff">Analysing data and Developing ML models in Python</p>
                 </div>
               </div>
             </div>
@@ -276,7 +278,7 @@
 
         <!-- ........................ -->
 
-        <div class="row gutters-40">
+        <!-- <div class="row gutters-40">
           <div class="col-md-4">
             <div class="portfolio__single-section mix category-d" data-order="1">
               <img class="portfolio__single-section__image img-responsive" src="{% static '/images/a.jpeg' %}" alt="">
@@ -290,7 +292,7 @@
           </div>
           <div class="col-md-4">
             <div class="portfolio__single-section mix category-a " data-order="2">
-              <img class="portfolio__single-section__image img-responsive" src="{%static '/images/2.jpeg' %}" alt="">
+              <img class="portfolio__single-section__image img-responsive" src="{%static '/images/f.jpeg' %}" alt="">
               <div class="portfolio__single-section__overlay">
                 <div class="overlay-content">
                   <h4>WEBSITE DESIGN</h4>
@@ -310,10 +312,10 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
          <!-- ........................... -->
-        <div class="row gutters-40">
-          <div class="col-md-4">
+        <!-- <div class="row gutters-40"> -->
+          <!-- <div class="col-md-4">
             <div class="portfolio__single-section mix category-c" data-order="4">
               <img class="portfolio__single-section__image img-responsive" src="{% static '/images/4.jpeg' %}" alt="">
               <div class="portfolio__single-section__overlay">
@@ -323,8 +325,8 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-4">
+          </div> -->
+          <!-- <div class="col-md-4">
             <div class="portfolio__single-section mix  category-d" data-order="5">
               <img class="portfolio__single-section__image img-responsive" src="{% static '/images/3.jpeg.png' %}" alt="">
               <div class="portfolio__single-section__overlay">
@@ -337,7 +339,7 @@
           </div>
           <div class="col-md-4">
             <div class="portfolio__single-section mix category-a" data-order="6">
-              <img class="portfolio__single-section__image img-responsive" src="{% static '/images/2.jpeg' %}" alt="">
+              <img class="portfolio__single-section__image img-responsive" src="{% static '/images/h.jpeg' %}" alt="">
               <div class="portfolio__single-section__overlay">
                 <div class="overlay-content">
                   <h4>LOGO DESIGN</h4>
@@ -345,6 +347,19 @@
                 </div>
               </div>
             </div>
+            <div class="col-md-4">
+            <div class="portfolio__single-section mix category-a" data-order="6">
+              <img class="portfolio__single-section__image img-responsive" src="{% static '/images/b.jpeg' %}" alt="">
+              <div class="portfolio__single-section__overlay">
+                <div class="overlay-content">
+                  <h4>LOGO DESIGN</h4>
+                  <p>Designer</p>
+                </div>
+              </div>
+            </div>
+          </div> -->
+
+
           </div>
         </div>
       </div>
