--- a/templates/index.html
+++ b/templates/index.html
@@ -114,12 +114,12 @@
 
               <div class="row row--margin-top">
                 <div class="col-md-4">
-                  <p class="about__bio"><strong style="color:#7b08ff">NAME :</strong>APARO CECILIA</p>
-                  <p class="about__bio"><strong style="color:#7b08ff">AGE :</strong> 23</p>
+                  <p class="about__bio"><strong style="color: purple">NAME :</strong>APARO CECILIA</p>
+                  <p class="about__bio"><strong style="color: purple">YEARS OF LEARNING :</strong> 4</p>
                 </div>
                 <div class="col-md-4">
-                  <p class="about__bio"><strong  style="color:#7b08ff">JOB TITLE :</strong> OPERATIONS OFFICER</p>
-                  <p class="about__bio"><strong  style="color:#7b08ff">LOCATION :</strong>KAMPALA, UG</p>
+                  <p class="about__bio"><strong  style="color: purple">OCCUPATION :</strong> OPERATIONS OFFICER</p>
+                  <p class="about__bio"><strong  style="color: purple">LOCATION :</strong>KAMPALA, UG</p>
                 </div>
               </div>
 
@@ -480,7 +480,7 @@
         <div class="row gutters-80">
           <div class="col-md-6 col-lg-3">
             <div class="thumbnail">
-              <img  src="{% static '/images/ther.png' %}" alt="" style="width: 100%; max-width: 400px; height: auto; margin: 0 auto; border-radius: 40%;">
+              <img  src="{% static '/images/ther.png' %}" alt="" style="width: 100%; max-width: 400px; height: 130px; margin: 0 auto; border-radius: 40%;">
               <h4 class="team__single-section__name">TherApp</h4>
               <p class="team__single-section__title">Flutter Framework</p>
 
@@ -501,7 +501,7 @@
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="thumbnail">
-              <img src="{% static '/images/oppo.png' %}" alt=""  style="width: 100%; max-width: 400px; height: auto; margin: 0 auto; border-radius: 40%;">
+              <img src="{% static '/images/oppo.png' %}" alt=""  style="width: 100%; max-width: 400px; height: 130px; margin: 0 auto; border-radius: 40%;">
               <h4 class="team__single-section__name">Opportune </h4>
               <p class="team__single-section__title">Django</p>
               <div class="team__overlay">
@@ -519,7 +519,7 @@
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="thumbnail">
-              <img src="{% static '/images/rescuemech.png' %}" alt=""  style="width: 100%; max-width: 400px; height: auto; margin: 0 auto; border-radius: 40%;">
+              <img src="{% static '/images/rescuemech.png' %}" alt=""  style="width: 100%; max-width: 400px; height: 130px; margin: 0 auto; border-radius: 40%;">
               <h4 class="team__single-section__name">Rescue Mech</h4>
               <p class="team__single-section__title">React</p>
               <div class="team__overlay">
@@ -535,7 +535,7 @@
            
           <div class="col-md-6 col-lg-3">
             <div class="thumbnail">
-              <img src="{% static '/images/asiika.png' %}" alt=""style="width: 100%; max-width: 400px; height: 140px; margin: 0 auto; border-radius: 40%;">
+              <img src="{% static '/images/asiika.png' %}" alt=""style="width: 100%; max-width: 400px; height: 130px; margin: 0 auto; border-radius: 40%;">
               <h4 class="team__single-section__name">Asiika Obulamu</h4>
               <p class="team__single-section__title">Flutter</p>
               <div class="team__overlay">
@@ -711,9 +711,10 @@
 
 <script>
   document.getElementById("cvButton").addEventListener("click", function() {
-    window.open("https://drive.google.com/uc?export=download&id=1ELBU88mRX37zozsby9V8PZ43X47Qy3qu", "_blank");
+    window.open("https://drive.google.com/file/d/1O1XXY0sYy4TB0i1iESOZAx_5urnTgI3c/preview", "_blank");
   });
 </script>
+
 
 <script>
   
