--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
       
 
 
-      <hr class="purple-line">
+      <hr class="orange-line">
 
        
       
@@ -234,13 +234,11 @@
            These experiences have shaped my skills in web development, data analysis, and UI/UX design, 
            fueling my passion for continuous learning and innovation.</p>
         <div class="portfolio__button-group">
-          <!-- <a class="button button--default" data-filter="all" href="#">My </a>
-          <a class="button button--default" data-filter=".category-a" href="#">Tech-Events</a>
-          <a class="button button--default" data-filter=".category-b" href="#">Internship</a>
-          <a class="button button--default" data-filter=".category-c" href="#">Tech Communities</a> -->
           <a class="button button--default" data-filter=".category-d" href="#">Skill Building</a>
         </div>
-        <div class="row gutters-40">
+
+      
+      <div class="row gutters-40">
           <div class="col-md-4">
             <div class="portfolio__single-section mix category-d " data-order="1">
               <img class="portfolio__single-section__image img-responsive" src="{% static '/images/g.jpg' %}" alt="">
@@ -252,6 +250,8 @@
               </div>
             </div>
           </div>
+         
+
           <div class="col-md-4">
             <div class="portfolio__single-section mix category-d" data-order="2">
               <img class="portfolio__single-section__image img-responsive" src="{%static '/images/2.png' %}" alt="">
@@ -263,6 +263,7 @@
               </div>
             </div>
           </div>
+          
           <div class="col-md-4">
             <div class="portfolio__single-section mix category-d" data-order="3">
               <img class="portfolio__single-section__image img-responsive" src="{% static '/images/3.jpg' %}" alt="">
@@ -275,97 +276,11 @@
             </div>
           </div>
         </div>
-
-        <!-- ........................ -->
-
-        <!-- <div class="row gutters-40">
-          <div class="col-md-4">
-            <div class="portfolio__single-section mix category-d" data-order="1">
-              <img class="portfolio__single-section__image img-responsive" src="{% static '/images/a.jpeg' %}" alt="">
-              <div class="portfolio__single-section__overlay">
-                <div class="overlay-content">
-                  <h4>LOGO DESIGN</h4>
-                  <p>Designer</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="portfolio__single-section mix category-a " data-order="2">
-              <img class="portfolio__single-section__image img-responsive" src="{%static '/images/f.jpeg' %}" alt="">
-              <div class="portfolio__single-section__overlay">
-                <div class="overlay-content">
-                  <h4>WEBSITE DESIGN</h4>
-                  <p>Designer</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="portfolio__single-section mix category-b" data-order="3">
-              <img class="portfolio__single-section__image img-responsive" src="{% static '/images/3.jpeg' %}" alt="">
-              <div class="portfolio__single-section__overlay">
-                <div class="overlay-content">
-                  <h4>LOGO DESIGN</h4>
-                  <p>Designer</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div> -->
-         <!-- ........................... -->
-        <!-- <div class="row gutters-40"> -->
-          <!-- <div class="col-md-4">
-            <div class="portfolio__single-section mix category-c" data-order="4">
-              <img class="portfolio__single-section__image img-responsive" src="{% static '/images/4.jpeg' %}" alt="">
-              <div class="portfolio__single-section__overlay">
-                <div class="overlay-content">
-                  <h4>PHOTOGRAPHY</h4>
-                  <p>photographer</p>
-                </div>
-              </div>
-            </div>
-          </div> -->
-          <!-- <div class="col-md-4">
-            <div class="portfolio__single-section mix  category-d" data-order="5">
-              <img class="portfolio__single-section__image img-responsive" src="{% static '/images/3.jpeg.png' %}" alt="">
-              <div class="portfolio__single-section__overlay">
-                <div class="overlay-content">
-                  <h4>WEBSITE DESIGN</h4>
-                  <p>Designer</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="portfolio__single-section mix category-a" data-order="6">
-              <img class="portfolio__single-section__image img-responsive" src="{% static '/images/h.jpeg' %}" alt="">
-              <div class="portfolio__single-section__overlay">
-                <div class="overlay-content">
-                  <h4>LOGO DESIGN</h4>
-                  <p>Designer</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-            <div class="portfolio__single-section mix category-a" data-order="6">
-              <img class="portfolio__single-section__image img-responsive" src="{% static '/images/b.jpeg' %}" alt="">
-              <div class="portfolio__single-section__overlay">
-                <div class="overlay-content">
-                  <h4>LOGO DESIGN</h4>
-                  <p>Designer</p>
-                </div>
-              </div>
-            </div>
-          </div> -->
-
-
-          </div>
+        </div>
         </div>
       </div>
     </div>
   </section>
-
 
 <section id="achievements" class="slider slider--bg">
   <div class="container">
@@ -382,7 +297,6 @@
           <li data-target="#myCarousel" data-slide-to="3"></li>
         </ol>
 
-        <!-- Wrapper for slides -->
         <div class="carousel-inner">
           <!-- First Item -->
           <div class="item active">
@@ -452,10 +366,10 @@
 
         <!-- Left and Right Controls -->
         <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="glyphicon glyphicon-chevron-left " style="color:#FFAC1B"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <a style="color: #FFAC1B;"    class="right carousel-control" href="#myCarousel" data-slide="next">
           <span class="glyphicon glyphicon-chevron-right"></span>
           <span class="sr-only">Next</span>
         </a>
@@ -492,7 +406,7 @@
                    
                     
                    
-                    <hr style="border: 0;border-bottom: 1px solid #ECEFF1;display:block;padding-top: 45px;">
+                    <!-- <hr style="border: 0;border-bottom: 1px solid #ECEFF1;display:block;padding-top: 45px;"> -->
                    
                   </div>
                 </div>
@@ -564,7 +478,7 @@
         <img class="img-fluid" src="{% static 'images/djj.png' %}" alt="DJJ">
       </div>
       <div class="col-7 col-sm-3 col-md-2">
-        <img class="img-fluid" src="{% static 'images/hcbj.png' %}" alt="HCBJ">
+        <img class="img-fluid" src="{% static 'images/c.png' %}" alt="HCBJ">
       </div>
       <div class="col-7 col-sm-3 col-md-2">
         <img class="img-fluid" src="{% static 'images/python.jpg' %}" alt="Python">
@@ -627,12 +541,12 @@
     <div class="container text-center">
       <h1 class="footer__title" style="color: orange">CECILIA</h1>
       <ul class="footer__contact-information">
-        <li><a href="tel:5555555555"><i class="material-icons">phone</i> Hotline (+256) 776178913</a></li>
-        <li><a href="mailto:sshariar458@gmail.com"><i class="material-icons">email</i> aparocecilia930@gmail.com</a></li>
+        <li><a href="tel:0776178913"><i class="material-icons">phone</i> Hotline (+256) 776178913</a></li>
+        <li><a href="mailto:aparocecilia930@gmail.com"><i class="material-icons">email</i> aparocecilia930@gmail.com</a></li>
         <li><a href="#"><i class="material-icons">location_on</i> Uganda-Kampala</a></li>
       </ul>
     </div>
-    <hr style="border: 0;border-top: 1px solid #525B60;display:block;margin-top: 40px;">
+    <hr style="border: 0;border-top: 1px solid #FFAC1B;display:block;margin-top: 40px;">
     <div class="container text-center">
     
      
