--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -192,6 +192,16 @@ html,body {
   font-size: 15px;
 }
 
+.navbar-nav li a:hover {
+  transform: translateY(-5px); /* Moves the item upward by 5px */
+  color: whitesmoke; /* Change color on hover */
+}
+
+
+
+
+
+
 .navbar{
   padding-top:30px;
 }
@@ -217,6 +227,20 @@ html,body {
   background-position: left center;
   color: #ff9800;
 }
+
+.navbar-nav li a {
+
+
+  transition: transform 0.3s ease, color 0.3s ease; /* Smooth transition for movement and color */
+
+
+}
+
+
+
+
+
+
 
 @media (min-width: 768px) {
   .nav{
@@ -315,16 +339,17 @@ letter-spacing: 1px;
   font-size: 16px;
   color: #636262;
   padding-bottom: 25px;
-  border-bottom: 1px #C1C1C1 dashed;
+  border-bottom: 2px dotted orange;
+
   display: block;
 }
 
 
 
-.purple-line {
-  border: 0;
+.orange-line {
+  border: 4px;
   height: 2px;
-  background-color: purple;
+  background-color: orange;
   margin: 20px 0;
   
 }
@@ -421,8 +446,8 @@ letter-spacing: 1px;
 .skill .thumbnail{
   padding: 10px 40px;
   border-radius: 10px;
-  -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 1px 10px 0px rgba(255, 155, 4, 0.34);
+  box-shadow: 0px 4px 20px 0px rgba(255, 188, 4, 0.6);
 }
 
 .skill .thumbnail .progress-bar{
@@ -454,8 +479,8 @@ letter-spacing: 1px;
 
 .service .thumbnail{
   padding: 30px 19px;
-  -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.15);
-  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0px 1px 10px 0px rgba(255, 155, 4, 0.34);
+  box-shadow: 0px 4px 20px 0px rgba(255, 188, 4, 0.6);
   border: 0;
 
 }
@@ -630,6 +655,7 @@ letter-spacing: 1px;
 
 }
 
+
 .slider--bg{
   background: url("/static/images/why.jpg") no-repeat;
   background-size: cover;
@@ -651,7 +677,7 @@ letter-spacing: 1px;
 .slider .carousel-content h4{
   font-size: 25px;
   font-family: Roboto-Light;
-  color: #fff;
+  color: #ebeaea;
   font-weight: bold;
 }
 
@@ -698,7 +724,9 @@ letter-spacing: 1px;
 
 .slider .material-icons{
   font-size: 20px;
-  color: #fff;
+  color: #ff9800;
+  border-color:#ff9800 ;
+  
 }
 
 .slider .carousel-indicators{
@@ -708,7 +736,8 @@ letter-spacing: 1px;
 .slider .carousel-indicators .active{
  width: 38px;
  height: 5px;
- background-color: #fff;
+ background-color: #ff9800;
+ border-color: #ff9800;
  border-radius: 50px;
  margin-left: 10px;
 }
@@ -734,7 +763,8 @@ letter-spacing: 1px;
   padding: 0;
   border: none;
   -webkit-box-shadow: 0px 1px 10px 0px rgba(255, 155, 4, 0.34);
-  box-shadow: 0px 1px 10px 0px rgba(255, 188, 4, 0.34);
+  box-shadow: 0px 4px 20px 0px rgba(255, 188, 4, 0.6);
+
   border-radius: 10px;
   position: relative;
 }
@@ -926,32 +956,49 @@ letter-spacing: 1px;
   z-index: -1;
 }
 
-.brand-logo__wrapper{
+
+
+
+/* .brand-logo__wrapper {
   max-width: 1400px;
   margin-right: auto;
   margin-left: auto;
+  display: flex;           /* Flex container 
+  flex-wrap: wrap;         /* Allow items to wrap 
+  gap: 10px;               /* Add spacing between items 
+} */
+
+
+.brand-logo__wrapper {
+  max-width: 1400px;
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;           /* Flexbox for larger screens */
+  flex-wrap: nowrap;       /* Prevent wrapping */
+  justify-content: space-between; /* Distribute items evenly */
+  gap: 10px;               /* Space between items */
 }
 
-.brand-logo__wrapper li{
-  list-style-type: none;
-  display: inline-block;
-  padding-right: 130px;
-  padding-left:20px ;
-  margin-bottom: 20px;
-  text-align: center;
+
+.brand-logo__wrapper > * {
+  flex: 0 0 auto;          /* Items size based on content */
+  box-sizing: border-box;
 }
 
-.brand-logo__wrapper li:last-child{
-  padding-right: 0;
-}
 
 @media (max-width: 600px) {
-  .brand-logo__wrapper{
-    padding-left: 40%;
-    margin-right: auto;
-    margin-left: auto;
+  .brand-logo__wrapper {
+    display: grid;          /* Grid for small screens */
+    grid-template-columns: repeat(2, 1fr); /* 2 equal columns */
+    gap: 10px;              /* Space between grid items */
+    justify-items: center;  /* Center items horizontally */
+  }
+
+  .brand-logo__wrapper > * {
+    width: 100%;            /* Ensure child items adapt properly */
   }
 }
+
 
 .blog .thumbnail{
   padding: 0;
